# OBUS-GHL

./: .gitignore  Dockerfile  LICENSE.txt  PREPROCESSING.md  README.md  docker-compose-local.yaml  docker-compose-server-local.yaml  docker-compose-server.yaml  matern.sh  pyproject.toml  requirements.txt  tflite_export.sh  tflite_export_matt.sh
ghlobus/callbacks/: BaseExamPredictionWriter.py  BaseVideoPredictionWriter.py  ClassificationExamPredictionWriter.py  ClassificationVideoPredictionWriter.py  CnnVectorWriter.py  EfwExamPredictionWriter.py  EfwVideoPredictionWriter.py  GaExamPredictionWriter.py  GaVideoPredictionWriter.py  RegressorExamPredictionWriter.py  RegressorVideoPredictionWriter.py  TwinExamPredictionWriter.py  __init__.py
ghlobus/data/: ExamDataModuleBase.py  ExamDataModuleInference.py  ExamDataModuleTraining.py  ExamDatasetBase.py  ExamDatasetFrame.py  VideoDataModuleBase.py  VideoDataModuleInference.py  VideoDataModuleTraining.py  VideoDatasetBase.py  VideoDatasetInference.py  VideoDatasetTraining.py  __init__.py
ghlobus/export/: tflite_export.py
ghlobus/inference/: evaluation.py  inference.py  inference_twin.py  tflite_inference.py
ghlobus/ingestion/: distributions_v4.py  efw_data_selection_v9.py  efw_data_split_v9.py  merge_instance_exam_v4.py  merge_instance_exam_v9.py  merge_sr_crf_v9.py  merge_tag_v9.py  preprocess_data_v4.py  preprocess_data_v9.py  run_curation_v4.sh  run_curation_v9.sh  tablify_sr_v9.py  twin_data_selection_v9.py  twin_data_split_v9.py
ghlobus/models/: BasicAdditiveAttention.py  Cnn2RnnClassifier.py  Cnn2RnnRegressor.py  (+8 more)
(+56 files in other folders)
