[project]
name = "obus-ghl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai-edge-torch>=0.1.1",
    "imageio[ffmpeg,pyav]==2.34.0",
    "ipdb==0.13.13",
    "jsonargparse[signatures]==4.34.0",
    "jupyter==1.1.1",
    "lightning>=2.1.0",
    "numpy>=1.23.0",
    "opencv-python==4.6.0.66",
    "openpyxl==3.1.5",
    "pandas>=1.5.1",
    "protobuf>=3.20.0",
    "pydicom==2.4.4",
    "pylibjpeg==2.0.1",
    "pylibjpeg-libjpeg==2.2.0",
    "python-gdcm==3.0.24.1",
    "scikit-learn==1.3.2",
    "seaborn>=0.13.2",
    "simpleitk==2.4.0",
    "tensorflow>=2.18.1",
    "timm==1.0.11",
    "torch==2.4.0",
    "torch-xla==2.4.0",
    "torchsummary>=1.5.1",
    "ujson==5.10.0",
    "wandb==0.18.6",
]
